--- a/src/SourceBuild/tarball/content/repos/Directory.Build.props
+++ b/src/SourceBuild/tarball/content/repos/Directory.Build.props
@@ -62,7 +62,7 @@
     <EnvironmentVariables Include="_InitializeDotNetCli=$(DotNetCliToolDir)" />
     <EnvironmentVariables Include="_DotNetInstallDir=$(DotNetCliToolDir)" />
     <EnvironmentVariables Include="_InitializeToolset=$(ProjectDir)Tools/source-built/Microsoft.DotNet.Arcade.Sdk/tools/Build.proj" Condition="'$(UseBootstrapArcade)' != 'true'" />
-    <EnvironmentVariables Include="_OverrideArcadeInitializeBuildToolFramework=net5.0"/> <!-- TODO: Temporarily remove condition because I'm using a built 6.0-dev version  Condition="'$(UseBootstrapArcade)' != 'true'" -->
+    <EnvironmentVariables Include="_OverrideArcadeInitializeBuildToolFramework=net5.0" /> <!-- DSEEFELD TODO: Temporarily remove condition Condition="'$(UseBootstrapArcade)' != 'true'" -->
 
     <!--
       With ProdCon v2, stabilization options are checked in, unlike ProdCon v1. These should be
