--- a/src/SourceBuild/tarball/content/repos/Directory.Build.targets
+++ b/src/SourceBuild/tarball/content/repos/Directory.Build.targets
@@ -31,6 +31,7 @@
   <PropertyGroup>
     <RepoApiImplemented Condition="'$(RepoApiImplemented)' == ''">true</RepoApiImplemented>
     <EngCommonToolsShFile Condition="Exists('$(ProjectDirectory)/eng/common/tools.sh')">$(ProjectDirectory)/eng/common/tools.sh</EngCommonToolsShFile>
+    <EngCommonBuildShFile Condition="Exists('$(ProjectDirectory)/eng/common/build.sh')">$(ProjectDirectory)/eng/common/build.sh</EngCommonBuildShFile>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -88,6 +89,21 @@
 
     <WriteLinesToFile File="$(RepoCompletedSemaphorePath)ApplyPatches.complete" Overwrite="true" />
   </Target>
+
+  <!--
+    Update root repo with trailing slash until https://github.com/dotnet/arcade/pull/7498 gets figured out
+    in arcade an propegated to all repos
+  -->
+  <Target Name="UpdateBuildRepoRoot"
+          BeforeTargets="Build"
+          Condition="'$(EngCommonBuildShFile)' != ''"
+          Inputs="$(MSBuildProjectFullPath)"
+          Outputs="$(RepoCompletedSemaphorePath)UpdateBuildRepoRoot.complete" >
+    <ReplaceTextInFile InputFile="$(EngCommonBuildShFile)"
+      OldText="/p:RepoRoot=&quot;$repo_root&quot;"
+      NewText="/p:RepoRoot=&quot;$repo_root/&quot;" />
+  </Target>
+
 
   <Target Name="UpdateBuildToolFramework"
           BeforeTargets="Build"
@@ -159,10 +175,10 @@
                             SourcePath="$(PrebuiltPackagesPath)"
                             Condition="'$(OfflineBuild)' == 'true'" />
 
-    <!--TODO: AddSourceToNuGetConfig NuGetConfigFile="%(NuGetConfigFiles.Identity)"
+    <AddSourceToNuGetConfig NuGetConfigFile="%(NuGetConfigFiles.Identity)"
                             SourceName="previously-source-built"
                             SourcePath="$(PrebuiltSourceBuiltPackagesPath)"
-                            Condition="'$(OfflineBuild)' == 'true'" /-->
+                            Condition="'$(OfflineBuild)' == 'true'" />
 
     <AddSourceToNuGetConfig NuGetConfigFile="%(NuGetConfigFiles.Identity)"
                             SourceName="reference-packages"
